styled contact forms

--- a/bookings/templates/bookings/brewtour_success.html
+++ b/bookings/templates/bookings/brewtour_success.html
@@ -24,7 +24,7 @@
             <p>The tour will start at {{ time }} and last an hour.</p>
             <p>We look forward to seeing you</p>
         </div>
-        <a href="{% url 'products' %}" class="btn btn-success">Continue Shopping</a>
+        <a href="{% url 'products' %}" class="btn btn-secoundary-color mt-3">Continue Shopping</a>
     </div>
 </section>
 <!-- ../Confirmation Brewtour Section -->
