--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,10 +20,9 @@
             <div class="col-lg-6 mx-auto">
                 <p class="mb-4 d-md-flex d-none">Check out our range of craft beer in the Taproom.
                     All our bottles and cans are available to
-                    take away and theres 9 taps to choose from.
-                    Ecommerce and home delivery coming soon</p>
+                    take away and theres 9 taps to choose from.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                    <a href="{% url 'booking_taproom' %}" class="btn btn-main-color btn-lg px-4 gap-3">Events</a>
+                    <a href="{% url 'booking_taproom' %}" class="btn btn-main-color btn-lg px-4 gap-3">Book Now</a>
                 </div>
             </div>
         </div>
