--- a/bookings/templates/bookings/taproom_booking.html
+++ b/bookings/templates/bookings/taproom_booking.html
@@ -25,7 +25,7 @@
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-center">
-                    <button class="btn btn-primary btn-lg px-4 gap-3" type="submit">Submit</button>
+                    <button class="btn btn-secoundary-color btn-lg px-4 gap-3 mt-3" type="submit">Submit</button>
                 </div>
             </form>
         </div>
