--- a/bookings/templates/bookings/taproom_success.html
+++ b/bookings/templates/bookings/taproom_success.html
@@ -25,7 +25,7 @@
             <p>We look forward to seeing you.</p>
         </div>
         <div class="text-center">
-            <a href="{% url 'products' %}" class="btn btn-success">Continue Shopping</a>
+            <a href="{% url 'products' %}" class="btn btn-secoundary-color mt-3">Continue Shopping</a>
         </div>
     </div>
 </section>
