--- a/events/templates/events/add_events.html
+++ b/events/templates/events/add_events.html
@@ -13,22 +13,24 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 text-center">
             <hr>
-            <h2 class="logo-font mb-4">Event Management</h2>
-            <h5 class="text-muted">Add a Event</h5>
+            <h1 class="logo-font mb-4">Event Management</h1>
             <hr>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
+    <div class="row contact-forms">
+        <div class="col-12">
+            <div class="text-center">
+                <h2 class="text-muted">Add a Event</h2>
+            </div>
             <form method="POST" action="{% url 'add_event' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'events' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Event</button>
+                <div class="text-right mt-3">
+                    <a class="btn btn-main-color rounded-0" href="{% url 'events' %}">Cancel</a>
+                    <button class="btn btn-secoundary-color rounded-0" type="submit">Add Event</button>
                 </div>
             </form>
         </div>
