--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -12,23 +12,25 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">
-        <div class="col-12 col-md-6">
+    <div class="row text-center">
+        <div class="col-12">
             <hr>
-            <h2 class="logo-font mb-4">Product Management</h2>
-            <h5 class="text-muted">Add a Product</h5>
+            <h1 class="logo-font mb-4">Product Management</h1>
             <hr>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-6">
+    <div class="row contact-forms">
+        <div class="col-12">
+            <div class="text-center">
+                <h2 class="text-muted">Add a Product</h2>
+            </div>
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                    <a class="btn btn-main-color rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-secoundary-color rounded-0" type="submit">Add Product</button>
                 </div>
             </form>
         </div>
