--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,7 +6,9 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
+<div class="text-center">
+  <h1 class="mb-4">{% trans "Sign Out" %}</h1>
+</div>
 <hr>
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
@@ -15,8 +17,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn btn-main-color rounded-0" href="{% url 'home' %}">Cancel</a>
+  <button class="btn-secoundary-color" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
