refactor html code improvements

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -41,8 +41,7 @@
                     <h2>Caft Beer</h2>
                     <div class="col-lg-12 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <a type="button" href="{% url 'products' %}"
-                                class="btn btn-main-color btn-lg px-4 gap-3">Shop
+                            <a href="{% url 'products' %}" class="btn btn-main-color btn-lg px-4 gap-3">Shop
                                 Now</a>
                         </div>
                     </div>
