--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -121,18 +121,19 @@
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
         </div>
+    </div>
 </section>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function (e) {
         window.scrollTo(0, 0)
     })
 </script>
 
-<script type="text/javascript">
+<script>
     $('#sort-selector').change(function () {
         var selector = $(this);
         var currentUrl = new URL(window.location);
