refactor taproom page html improvements

--- a/home/templates/home/taproom.html
+++ b/home/templates/home/taproom.html
@@ -23,9 +23,9 @@
                     Draught craft beer for you
                     to enjoy. We are open 7 days a
                     week so get yourself down.</p>
-                <a href="{% url 'booking_taproom' %}" class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                    <button type="button" class="btn btn-main-color btn-lg px-4 gap-3">Book Now</button>
-                </a>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
+                    <a href="{% url 'booking_taproom' %}" class="btn btn-main-color btn-lg px-4 gap-3">Book Now</a>
+                </div>
             </div>
         </div>
     </div>
@@ -128,5 +128,5 @@
         </div>
     </div>
 </section>
-<!-- ./Beer selection section
+<!-- ./Beer selection section -->
 {% endblock %}
