--- a/static/css/base.css
+++ b/static/css/base.css
@@ -446,6 +446,11 @@ nav .navbar-nav li a:hover {
     border: none;
 }
 
+iframe {
+    width: 100%;
+    height: 400px;
+}
+
 /* our story page */
 
 #water-image {
