refactor html structure improvents for validator

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -68,7 +68,7 @@
                     <small class="ml-3">
                         <a class="dark-text" href="{% url 'edit_event' event.id %}">Edit</a> |
                         <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete</a>
-                    </small></li>
+                    </small>
                 </div>
             </div>
             <hr>
