--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -33,6 +33,7 @@
 
 {% block content %}
 <section class="container-fluid new-section-margin ">
+    <div id="top"></div>
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font">Products</h2>
@@ -117,7 +118,7 @@
             {% endfor %}
         </div>
         <div class="btt-button shadow-sm rounded-0 border border-black">
-            <a class="btt-link d-flex h-100">
+            <a class="btt-link d-flex h-100" href="#top">
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
         </div>
