--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -15,7 +15,9 @@
     <div class="row text-center">
         <div class="col-12">
             <hr>
-            <h1 class="logo-font mb-4">Product Management</h1>
+            <div class="text-center">
+                <h1 class="logo-font mb-4">Product Management</h1>
+            </div>
             <hr>
         </div>
     </div>
