--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
                             <a href="{% url 'profile' %}" class="dropdown-item text-white">My Profile</a>
                             <a href="{% url 'account_logout' %}" class="dropdown-item text-white">Logout</a>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item text-white">Register</a>
+                            <a href="{% url 'account_signup' %}" class="dropdown-item text-white">Sign up</a>
                             <a href="{% url 'account_login' %}" class="dropdown-item text-white">Login</a>
                             {% endif %}
                         </div>
