--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,7 +16,7 @@
 <section class="mt-10">
     <div class="px-4 py-5 text-center d-flex align-items-end justify-content-center" id="contact-hero-image">
         <div class="overlay hero-call-to-action mb-3 d-none d-md-block">
-            <h1 class="display-5 fw-bold">MAKE A BOOKING</h1>
+            <h1 class="display-5 fw-bold">MAKE A BOOKING AT THE TAPROOM</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="mb-4 d-md-flex d-none">Here at North Yeast Brewing
                     If you would like to come
