fix: links fixed and security improvements

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -49,7 +49,7 @@
                                 </span>
                             </li>
                             <li>
-                                <a href="{{ event.event_ticket_link }}">
+                                <a href="{{ event.event_ticket_link }}" target="_blank" rel="noopener">
                                     <span class="orange"><i class="fa-solid fa-up-right-from-square"></i>
                                         {{ event.event_ticket_host }}</span></a>
                             </li>
