--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                             <a href="{% url 'view_email_list' %}" class="dropdown-item text-white">Mange Newsletter
                                 signups</a>
                             <a href="{% url 'add_event' %}" class="dropdown-item text-white">Create Events</a>
-                            <a href="{% url 'messages' %}" class="dropdown-item text-white">Manage Messages</a>
+                            <a href="{% url 'messages' %}" class="dropdown-item text-white">Manage Enquirys</a>
                             <a href="{% url 'manage_bookings' %}" class="dropdown-item text-white">Manage Bookings</a>
 
                             {% endif %}
