--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -60,7 +60,7 @@
                 <a href="{% url 'send_newsletter' %}" class="dropdown-item">Create Newsletter</a>
                 <a href="{% url 'view_email_list' %}" class="dropdown-item">Mange Newsletter signups</a>
                 <a href="{% url 'add_event' %}" class="dropdown-item">Create Events</a>
-                <a href="{% url 'messages' %}" class="dropdown-item">Manage Messages</a>
+                <a href="{% url 'messages' %}" class="dropdown-item">Manage Enquirys</a>
                 <a href="{% url 'manage_bookings' %}" class="dropdown-item">Manage Bookings</a>
 
                 {% endif %}
