--- a/static/css/base.css
+++ b/static/css/base.css
@@ -437,6 +437,23 @@ nav .navbar-nav li a:hover {
     color: #17a2b8;
 }
 
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* contact page */
 .contact-forms {
     border: 2px solid #142127;
