--- a/static/css/base.css
+++ b/static/css/base.css
@@ -114,6 +114,11 @@ footer {
 
 }
 
+/* sections */
+.new-section-margin {
+    margin-top: 90px;
+}
+
 /* navbar  */
 #mobile-logo {
     margin-left: 9em;
@@ -167,6 +172,7 @@ nav .navbar-nav li a:hover {
 }
 
 /* Hero image section */
+.product-overlay,
 .overlay {
     background-color: rgba(0, 0, 0, 0.6);
     color: #fafafa;
@@ -174,11 +180,6 @@ nav .navbar-nav li a:hover {
 
 .hero-call-to-action {
     max-width: 800px;
-}
-
-/* sections */
-.new-section-margin {
-    margin-top: 90px;
 }
 
 
@@ -194,6 +195,17 @@ nav .navbar-nav li a:hover {
     height: 50vh;
     object-fit: cover;
 
+}
+
+@media only screen and (max-width: 500px) {}
+
+#middle-nav {
+    display: none;
+}
+
+.logo {
+    height: 80px;
+    width: 80px
 }
 
 #contact-hero-image {
@@ -309,8 +321,16 @@ nav .navbar-nav li a:hover {
 
 /* product details page heros */
 .product-overlay {
-    width: 50%;
+    width: 70%;
 }
+
+@media only screen and (max-width: 600px) {
+    .product-overlay {
+        width: 100%;
+    }
+}
+
+
 
 .centered {
     position: absolute;
@@ -368,7 +388,6 @@ nav .navbar-nav li a:hover {
     border-radius: 50%;
     background-color: white;
     border: 3px solid black;
-
 }
 
 #brew-sheet-section {
@@ -376,6 +395,71 @@ nav .navbar-nav li a:hover {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+#color-1 {
+    background-color: #f6ec46;
+}
+
+#color-2 {
+    background-color: #f8cc00;
+}
+
+#color-3 {
+    background-color: #f3a600;
+}
+
+#color-4 {
+    background-color: #f3a600;
+}
+
+#color-5 {
+    background-color: #f3a600;
+}
+
+#color-6 {
+    background-color: #cd6604;
+}
+
+#color-7 {
+    background-color: #bb4820;
+}
+
+#color-8 {
+    background-color: #bb4820;
+}
+
+#color-9 {
+    background-color: #9b3314;
+}
+
+#color-10 {
+    background-color: #9b3314;
+}
+
+#color-11 {
+    background-color: #3a0c0d;
+}
+
+#color-12 {
+    background-color: #3a0c0d;
+}
+
+
+
+
+@media only screen and (max-width: 600px) {
+    .brew-sheet-image {
+        height: 80px;
+        width: 80px;
+    }
+
+    .color-scale-marker {
+        background-color: grey;
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+    }
 }
 
 .form-group {
