--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container">
-
-    <div class="row">
-        <div class="col-6">
-            <div class="allauth-form-inner-content">
-                {% block inner_content %}
-                {% endblock %}
+<div class="container-fluid text-center new-section-margin">
+    <div class="contact-forms">
+        <div class="row">
+            <div class="col-12">
+                <div class="allauth-form-inner-content">
+                    {% block inner_content %}
+                    {% endblock %}
+                </div>
             </div>
         </div>
     </div>
