--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,24 +2,26 @@
 
 {% load i18n %}
 
+<hr>
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
 <hr>
-<div class="text-center">
-  <h1 class="mb-4">{% trans "Sign Out" %}</h1>
+<div class="contact-forms">
+  <div class="text-center">
+    <h1 class="mb-4">{% trans "Sign Out" %}</h1>
+  </div>
+  <hr>
+  <p>{% trans 'Are you sure you want to sign out?' %}</p>
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <a class="btn btn-main-color rounded-0" href="{% url 'home' %}">Cancel</a>
+    <button class="btn-secoundary-color" type="submit">{% trans 'Sign Out' %}</button>
+  </form>
 </div>
-<hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="btn btn-main-color rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button class="btn-secoundary-color" type="submit">{% trans 'Sign Out' %}</button>
-</form>
 
 
 {% endblock %}
