--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -14,13 +14,14 @@
                 <p class="my-0">Search</p>
             </div>
         </a>
-        <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0 white-text" aria-labelledby="mobile-search">
+        <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0 white-text dark-background-color" class="dark-"
+            aria-labelledby="mobile-search">
             <form class="form" method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-black rounded-0" type="text" name="q"
                         placeholder="Search our site">
                     <div class="input-group-append">
-                        <button class="form-control form-control btn btn-black border border-black rounded-0"
+                        <button class="form-control form-control btn btn-main-color border border-black rounded-0"
                             type="submit">
                             <span class="icon">
                                 <i class="fas fa-search"></i>
