--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
 {% block hero %}
 <!-- hero -->
 <section class="mt-10">
-    <div class="product-hero">
+    <div id="details-page-hero">
         <img class="product-hero" src="{{ product.product_banner_url }}" alt="{{ product.product_name }}">
         <div class="centered text-center product-overlay">
             <h1>{{ product.product_name }}</h1>
@@ -50,13 +50,13 @@
                 </div>
 
                 <div class="col-12">
-                    <a href="{% url 'products' %}" class="btn rounded-0 mt-5 btn-main-color">
+                    <a href="{% url 'products' %}" class="btn rounded-0 btn-main-color mt-3">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="text-uppercase">Keep Shopping</span>
                     </a>
-                    <input type="submit" class="btn btn-secoundary-color rounded-0 text-uppercase mt-5"
+                    <input type="submit" class="btn btn-secoundary-color rounded-0 text-uppercase mt-3"
                         value="Add to Cart">
                 </div>
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
