--- a/static/css/base.css
+++ b/static/css/base.css
@@ -88,6 +88,12 @@ footer {
     color: #142127;
 }
 
+.nav-bar,
+.dark-background-color {
+    background-color: #142127;
+    color: #fafafa;
+}
+
 /* button colors */
 .btn-main-color {
     background-color: white;
@@ -124,11 +130,6 @@ footer {
     margin-left: 9em;
 }
 
-.nav-bar,
-.dark-background-color {
-    background-color: #142127;
-    color: #fafafa;
-}
 
 nav .navbar-nav li a {
     color: white !important;
@@ -201,53 +202,73 @@ nav .navbar-nav li a:hover {
 
 .product-hero {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     object-fit: cover;
-
 }
 
 #contact-hero-image {
     background: url('/media/banner-6.png') no-repeat center center;
-    background-size: ;
+    background-size: cover;
     color: #fafafa;
-    height: 50vh;
+    height: 60vh;
 }
 
 #story-hero-image {
     background: url('/media/image-3.jpg') no-repeat center center;
     background-size: cover;
     color: #fafafa;
-    height: 50vh;
+    height: 60vh;
 }
 
 #taproom-hero-image {
     background: url('/media/image-4.jpg') no-repeat center center;
     background-size: cover;
     color: #fafafa;
-    height: 50vh;
+    height: 60vh;
 }
 
 #events-hero-image {
     background: url('/media/banner-5.png') no-repeat center center;
     background-size: cover;
     color: #fafafa;
-    height: 50vh;
-}
-
-/* Index.html */
-.hero {
-    background-size: cover;
-    color: #fafafa;
-    height: 50vh;
+    height: 60vh;
 }
 
 #index-hero-image {
     background: url('/media/banner-1.jpg') no-repeat center center;
     background-size: cover;
     color: #fafafa;
-    height: 50vh;
+    height: 60vh;
 }
 
+@media only screen and (max-width: 991px) {
+
+    #index-hero-image,
+    #products-hero-image,
+    #events-hero-image,
+    #taproom-hero-image,
+    #story-hero-image,
+    #contact-hero-image {
+        height: 40vh;
+
+    }
+}
+
+@media only screen and (max-width: 400px) {
+
+    #details-page-hero,
+    #index-hero-image,
+    #products-hero-image,
+    #events-hero-image,
+    #taproom-hero-image,
+    #story-hero-image,
+    #contact-hero-image {
+        height: 30vh;
+
+    }
+}
+
+/* Index.html */
 
 /* Index Features */
 .feature {
@@ -287,7 +308,7 @@ nav .navbar-nav li a:hover {
 
 }
 
-@media only screen and (max-width: 773px) {
+@media only screen and (max-width: 778px) {
     #feat-row {
         margin: 0px;
         padding: 0px;
@@ -319,13 +340,7 @@ nav .navbar-nav li a:hover {
 
 /* product details page heros */
 .product-overlay {
-    width: 70%;
-}
-
-@media only screen and (max-width: 600px) {
-    .product-overlay {
-        width: 100%;
-    }
+    width: 50%;
 }
 
 .centered {
@@ -333,6 +348,20 @@ nav .navbar-nav li a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 600px) {
+    .product-overlay {
+        width: 100%;
+    }
+
+    .product-hero {
+        height: 30vh;
+    }
+
+    .centered {
+        top: 33%;
+    }
 }
 
 .card {
