--- a/contact/templates/contact/view_messages.html
+++ b/contact/templates/contact/view_messages.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<section class="container-fluid">
+<section class="container-fluid min-height">
     <hr>
     <div class="text-center">
         <h1>Manage Enquirys</h1>
