--- a/bookings/templates/bookings/taproom_success.html
+++ b/bookings/templates/bookings/taproom_success.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 <!-- ./Taproom booking Section -->
-<section class="new-section-margin w-100">
+<section class="new-section-margin w-100 min-height">
     <div class="text-center">
         <h1>Booking Confirmed</h1>
     </div>
