--- a/newsletter/templates/newsletter/newsletter_success.html
+++ b/newsletter/templates/newsletter/newsletter_success.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="new-section-margin container">
+<div class="new-section-margin container min-height">
     <div class="card-body contact-forms">
         <h1 class="card-title">Your all signed up</h1>
         <p class="card-text">{{ email }} as been added to our mailing list.</p>
