--- a/newsletter/templates/newsletter/view_email_list.html
+++ b/newsletter/templates/newsletter/view_email_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <!-- newsletter signup section -->
 <section>
-    <div class="container">
+    <div class="container min-height">
         <hr>
         <div class="text-center">
             <h1>Mailing list</h1>
