--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -63,7 +63,9 @@
                     </div>
                 </div>
             </div>
+            {% if request.user.is_superuser %}
             <div class="row">
+
                 <div class="col-12 text-center">
                     <small class="ml-3">
                         <a class="dark-text" href="{% url 'edit_event' event.id %}">Edit</a> |
@@ -71,6 +73,7 @@
                     </small>
                 </div>
             </div>
+            {% endif %}
             <hr>
             {% endfor %}
         </div>
